# agent-action-audit-template

./: CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_case_proposal.md  claim_boundary_review.md
.github/workflows/: test.yml
docs/: EVAL_FACTSHEET.md  LIMITATIONS.md  PUBLIC_CLAIM_BOUNDARY.md  RELEASE_NOTES_V1_0_0.md  RELEASE_NOTES_V1_1_0_DRAFT.md  audit_log_design.md  human_review_flow.md
examples/: blocked_action_receipt.json  demo_cases.jsonl  safe_action_receipt.json
schemas/: action_receipt.schema.json  human_review.schema.json
src/agent_action_audit/: __init__.py  classifier.py  schema.py
state/sample_receipts/: demo_receipts.jsonl  z4_grading_report.json
tests/: test_classifier.py  test_demo_receipt_schema.py  test_network_and_remote_action_absence.py  test_public_claim_language_guard.py  test_receipt_schema.py
tools/: run_demo.py
