[project]
name = "agent-action-audit-template"
version = "1.1.0"
description = "Public-safe templates and a local classifier demo for agent action audit records."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
